Closed Bug 1896599 Opened 1 year ago Closed 1 year ago

High frequency accessible/tests/mochitest/events/test_attrs.html | single tracking bug

Categories

(Core :: Disability Access APIs, defect, P5)

defect

Tracking

()

RESOLVED FIXED
128 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox126 --- unaffected
firefox127 --- unaffected
firefox128 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: emilio)

References

(Regression)

Details

(Keywords: intermittent-failure, intermittent-testcase, regression, Whiteboard: [stockwell disable-recommended])

Attachments

(1 file)

Filed by: tszentpeteri [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=458056295&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/KLroL7JSSWOtN3n_xOnwpg/runs/0/artifacts/public/logs/live_backing.log


[task 2024-05-14T09:32:13.209Z] 09:32:13     INFO - TEST-PASS | accessible/tests/mochitest/events/test_attrs.html | Test with ID = ' 'textbox'  focus' succeed.  Event 'focus' was handled. 
[task 2024-05-14T09:32:13.210Z] 09:32:13     INFO - Invoke the ' 'textbox'  'home ' key' test { scenario #0: expected 'text caret moved' event;  }
[task 2024-05-14T09:32:13.210Z] 09:32:13     INFO - Buffered messages finished
[task 2024-05-14T09:32:13.211Z] 09:32:13     INFO - TEST-UNEXPECTED-FAIL | accessible/tests/mochitest/events/test_attrs.html |  for ['input@id="textbox" node', address: [object HTMLInputElement], role: entry, address: 0x7fd3f8d72c40] - got "{\"event-from-input\":\"false\"}", expected "{\"event-from-input\":\"true\"}"
[task 2024-05-14T09:32:13.211Z] 09:32:13     INFO - SimpleTest.is@chrome://mochikit/content/tests/SimpleTest/SimpleTest.js:509:14
[task 2024-05-14T09:32:13.211Z] 09:32:13     INFO - compareSimpleObjects@chrome://mochitests/content/a11y/accessible/tests/mochitest/attributes.js:511:7
[task 2024-05-14T09:32:13.211Z] 09:32:13     INFO - compareAttrs@chrome://mochitests/content/a11y/accessible/tests/mochitest/attributes.js:473:23
[task 2024-05-14T09:32:13.211Z] 09:32:13     INFO - testAttrsInternal@chrome://mochitests/content/a11y/accessible/tests/mochitest/attributes.js:433:15
[task 2024-05-14T09:32:13.212Z] 09:32:13     INFO - testAttrs@chrome://mochitests/content/a11y/accessible/tests/mochitest/attributes.js:17:20
[task 2024-05-14T09:32:13.212Z] 09:32:13     INFO - checker_check@chrome://mochitests/content/a11y/accessible/tests/mochitest/events/test_attrs.html:31:18
[task 2024-05-14T09:32:13.212Z] 09:32:13     INFO - eventQueue_function@chrome://mochitests/content/a11y/accessible/tests/mochitest/events.js:677:23
[task 2024-05-14T09:32:13.212Z] 09:32:13     INFO - eventQueue_handleEvent@chrome://mochitests/content/a11y/accessible/tests/mochitest/events.js:601:16
[task 2024-05-14T09:32:13.212Z] 09:32:13     INFO - observe@chrome://mochitests/content/a11y/accessible/tests/mochitest/events.js:2433:29
[task 2024-05-14T09:32:13.213Z] 09:32:13     INFO - TEST-PASS | accessible/tests/mochitest/events/test_attrs.html |  for ['textarea@id="textarea" node', address: [object HTMLTextAreaElement], role: entry, address: 0x7fd3f9479d00] 
Flags: needinfo?(emilio)
Keywords: regression
Regressed by: 1895870
Summary: Intermittent accessible/tests/mochitest/events/test_attrs.html | single tracking bug → High frequency accessible/tests/mochitest/events/test_attrs.html | single tracking bug

Set release status flags based on info from the regressing bug 1895870

I haven't been able to repro this after bug 1896763. However, is this test really useful? It's testing for an event-from-input attribute which seems Gecko specific and barely known / tested. Maybe we can remove this attribute altogether?

Flags: needinfo?(emilio) → needinfo?(jteh)

It's slightly possible JAWS uses this, though I doubt it since we don't support it for cached Accessibles from content processes and I would've thought we'd have seen problems by now if it did.

That said, even if this attribute isn't used directly, it comes from an IsFromUserInput flag on a11y events which must be wrong in this case. Android at least does check this in a few places.

Flags: needinfo?(jteh)

Since it was filed this has already picked up 154 total failures: https://treeherder.mozilla.org/intermittent-failures/bugdetails?startday=2024-05-11&endday=2024-05-18&tree=trunk&failurehash=all&bug=1896599
It should be disabled on a11y if not fixed soon. Thank you.

Flags: needinfo?(jteh)
Flags: needinfo?(emilio)
Flags: needinfo?(emilio)

As per the comments it isn't supported with cache-the-world on, it's
barely documented if at all, and a test for it seems to be failing
without me being able to reproduce it at least (tried on both windows
and Linux).

I don't think it's worth digging too much more into it. My guess is a
reentrant / differently timed a11y event caused by my scheduling
changes, or so, which would override sEventTargetNode or the other
static bool.

The test has ~always failed on macOS too...

Assignee: nobody → emilio
Status: NEW → ASSIGNED
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/b309515d9ba5 Remove event-from-input support. r=Jamie,devtools-reviewers,eeejay,nchevobbe
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 128 Branch
Flags: needinfo?(jteh)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: